--- a/docker/production.yml
+++ b/docker/production.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.8'
 
 services:
   db:
@@ -14,7 +14,7 @@ services:
   web:
     build:
       context: ${PWD}
-      dockerfile: docker/Dockerfile.production
+      dockerfile: docker/web/Dockerfile.production
     environment:
       FLASK_ENV: ${FLASK_ENV}
       FLASK_CONFIG: ${FLASK_CONFIG}
