--- a/docker/testing.yml
+++ b/docker/testing.yml
@@ -1,7 +1,7 @@
-version: '3.4'
+version: '3.8'
 
 services:
-  db:
+  postgres:
     image: postgres
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
