--- a/docker/production.yml
+++ b/docker/production.yml
@@ -2,14 +2,15 @@ version: '3.8'
 
 services:
   db:
-    image: mongo:latest
+    image: postgres
     environment:
-      MONGO_INITDB_ROOT_USERNAME: 'root'
-      MONGO_INITDB_ROOT_PASSWORD: 'mongodb'
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "${MONGO_PORT}:27017"
+      - "${POSTGRES_PORT}:5432"
     volumes:
-      - mongodbdata:/var/lib/mongodb/data
+      - pgdata:/var/lib/postgresql/data
   web:
     build:
       context: ${PWD}
@@ -17,9 +18,11 @@ services:
     environment:
       FLASK_ENV: ${FLASK_ENV}
       FLASK_CONFIG: ${FLASK_CONFIG}
-      APPLICATION_DB: 'application'
-      MONGO_INITDB_ROOT_USERNAME: 'root'
-      MONGO_INITDB_ROOT_PASSWORD: 'mongodb'
+      APPLICATION_DB: ${APPLICATION_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_HOSTNAME: "db"
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PORT: ${POSTGRES_PORT}
     command: gunicorn -w 4 -b 0.0.0.0 wsgi:app
     volumes:
       - ${PWD}:/opt/code
@@ -31,4 +34,4 @@ services:
       - 8080:8080
 
 volumes:
-  mongodbdata:
+  pgdata:
