--- a/docker/production_mongo.yml
+++ b/docker/production_mongo.yml
@@ -2,15 +2,14 @@ version: '3.8'
 
 services:
   db:
-    image: postgres
+    image: mongo:latest
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: 'root'
+      MONGO_INITDB_ROOT_PASSWORD: 'mongodb'
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${MONGO_PORT}:27017"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - mongodbdata:/var/lib/mongodb/data
   web:
     build:
       context: ${PWD}
@@ -18,11 +17,9 @@ services:
     environment:
       FLASK_ENV: ${FLASK_ENV}
       FLASK_CONFIG: ${FLASK_CONFIG}
-      APPLICATION_DB: ${APPLICATION_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_HOSTNAME: "db"
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_PORT: ${POSTGRES_PORT}
+      APPLICATION_DB: 'application'
+      MONGO_INITDB_ROOT_USERNAME: 'root'
+      MONGO_INITDB_ROOT_PASSWORD: 'mongodb'
     command: gunicorn -w 4 -b 0.0.0.0 wsgi:app
     volumes:
       - ${PWD}:/opt/code
@@ -34,4 +31,4 @@ services:
       - 8080:8080
 
 volumes:
-  pgdata:
+  mongodbdata:
